# mliot-embeddedc-2026-hw

./: .gitignore
week01/: FSM_week1.drawio  main.c
week02/: REQUIREMENT.md  answer.txt  main.c
week03/: REQUIREMENT.md  answers.txt  build_and_flash.bat
week04/: REQUIREMENT.md  answers.txt
week04/Thuc_hanh/: CMakeLists.txt  build_and_flash.bat  main.c
